--- a/src/app/containers/login/login.container.html
+++ b/src/app/containers/login/login.container.html
@@ -1,11 +1,20 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <mat-form-field>
-    <input matInput placeholder="IITK Username" formControlName="username" required>
-  </mat-form-field>
+<div fxLayout="column" fxLayoutAlign="center center" class="container">
+  <mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+          <input matInput placeholder="IITK Username" formControlName="username" required>
+        </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Password" type="password" formControlName="password" required>
-  </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" type="password" formControlName="password" required>
+        </mat-form-field>
 
-  <button type="submit" [disabled]="!loginForm.valid" mat-stroked-button>Login</button>
-</form>
+        <div fxLayout="row" fxLayoutAlign="center center" class="button-container">
+          <button type="submit" [disabled]="!loginForm.valid" mat-stroked-button>Login</button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
