--- a/src/app/logged-in/components/navbar/navbar.component.html
+++ b/src/app/logged-in/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <span>Campus App</span>
+  <span>
+    <a routerLink="/home"> Campus App </a>
+  </span>
 
   <!-- This fills the remaining space of the current row -->
   <span fxFlex="1 1 auto"></span>
