--- a/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
+++ b/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
@@ -1,2 +1,7 @@
 <ca-navbar [user]="currentUser$ | async"></ca-navbar>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <ca-sidenav [chatPreviews]="chatPreviews$ | async"></ca-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
