--- a/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
+++ b/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
@@ -1,6 +1,9 @@
 <ca-navbar [user]="currentUser$ | async"></ca-navbar>
 <mat-sidenav-container>
-  <ca-sidenav [chatPreviews]="chatPreviews$ | async"></ca-sidenav>
+  <mat-sidenav *ngIf="chatPreviews$ | async as chatPreviews" mode="side" [opened]="chatPreviews.length !== 0">
+    <ca-chat-preview *ngFor="let chat of chatPreviews" [chat]="chat">
+    </ca-chat-preview>
+  </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
