--- a/src/app/logged-in/components/navbar/navbar.component.html
+++ b/src/app/logged-in/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <span class="logout">
-    <button matTooltip="Logout" aria-label="Logout from the app" mat-icon-button>
+    <button matTooltip="Logout" aria-label="Logout from the app" mat-icon-button (click)="onLogout()">
       <mat-icon>logout</mat-icon>
     </button>
   </span>
