--- a/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
+++ b/src/app/logged-in/containers/logged-in-wrapper/logged-in-wrapper.container.html
@@ -1,4 +1,4 @@
-<ca-navbar [user]="currentUser$ | async"></ca-navbar>
+<ca-navbar [user]="currentUser$ | async" (logout)="onLogout()"></ca-navbar>
 <mat-sidenav-container>
   <mat-sidenav *ngIf="chatPreviews$ | async as chatPreviews" mode="side" [opened]="chatPreviews.length !== 0">
     <ca-chat-preview *ngFor="let chat of chatPreviews" [chat]="chat">
