--- a/src/app/core/containers/app/app.container.html
+++ b/src/app/core/containers/app/app.container.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div *ngIf="loading$ | async; else routes" class="loading-container" fxLayout="column" fxLayoutAlign="center center">
+  <mat-spinner></mat-spinner>
+</div>
+<ng-template #routes>
+  <router-outlet></router-outlet>
+</ng-template>
