--- a/src/app/logged-in/containers/chat/chat.container.html
+++ b/src/app/logged-in/containers/chat/chat.container.html
@@ -10,7 +10,9 @@
   </div>
   <div class="user-info" fxLayout="column" *ngIf="user$ | async as user">
     <div fxLayout="row" fxLayoutAlign="center center">
-      <div class="img" [style.background-image]="url(user)"></div>
+      <div class="img" [style.background-image]="url(user)">
+        <div class="indicator" [class.online]="user.username | getOnline | async"></div>
+      </div>
     </div>
     <div class="mat-headline name">
       {{ user.name }}
