--- a/src/app/logged-in/components/chats/chats.component.scss
+++ b/src/app/logged-in/components/chats/chats.component.scss
@@ -14,6 +14,18 @@
   right: 0;
 }
 
+.loading-container {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+}
+
+.loading-more {
+  margin: 10px 0;
+}
+
 .message {
   color: white;
   background-color: mat-color($mat-blue-gray, 500);
