--- a/src/app/logged-in/components/navbar/navbar.component.html
+++ b/src/app/logged-in/components/navbar/navbar.component.html
@@ -1,4 +1,9 @@
 <mat-toolbar color="primary">
+  <span class="menu">
+    <button aria-label="Sidenav" mat-icon-button (click)="onToggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </span>
   <span>
     <a routerLink="/home"> Campus App </a>
   </span>
