--- a/src/app/logged-in/components/chat-preview/chat-preview.component.scss
+++ b/src/app/logged-in/components/chat-preview/chat-preview.component.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import '../../../../variables.scss';
 
 $img-dim: 60px;
 $ind-dim: 12.5px;
@@ -32,6 +33,10 @@ $ind-dim: 12.5px;
   padding: 10px 0;
   max-width: 20vw;
 
+  @media #{$lt-sm-break} {
+    max-width: 80vw;
+  }
+
   &.active-link {
     background-color: mat-color($mat-gray, 100);
   }
@@ -40,6 +45,9 @@ $ind-dim: 12.5px;
 .column {
   max-width: calc(20vw - 80px);
   padding-right: 5px;
+  @media #{$lt-sm-break} {
+    max-width: calc(80vw - 80px);
+  }
 }
 
 .name,
