Fix minor mobile screen issues

--- a/src/app/auth/containers/login/login.container.scss
+++ b/src/app/auth/containers/login/login.container.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import '../../../../variables.scss';
 
 .container {
   min-height: 100vh;
@@ -6,6 +7,10 @@
   mat-form-field,
   .view {
     width: 20vw;
+
+    @media #{$lt-sm-break} {
+      width: 80vw;
+    }
   }
 
   .button-container {
