--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 $xs-break: 'screen and (max-width: 599px)';
 $sm-break: 'screen and (min-width: 600px) and (max-width: 959px)';
 $md-break: 'screen and (min-width: 960px) and (max-width: 1279px)';
